# multi-calendar-dimension

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  MANIFEST.in  README.md  RELEASE_NOTES.md  SECURITY.md  deploy.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
examples/: __init__.py  complete_guide.ipynb  example1_basic_conversion.py  example2_date_dimension.py  example3_monthly_range.py  example4_current_date.py  example5_advanced_analysis.py  example6_persian_events.py  example7_hijri_with_month_names.py  example8_iranian_holidays.py  example_for_user.py
multi_calendar_dimension/: __init__.py  cli.py
multi_calendar_dimension/converters/: __init__.py  cross.py  hijri.py  jalali.py  ummalqura_data.py
multi_calendar_dimension/current/: __init__.py  now.py
multi_calendar_dimension/events/: __init__.py  gregorian_events.py  hijri_events.py  persian_events.py
multi_calendar_dimension/generator/: __init__.py  dimension.py  range_generator.py
multi_calendar_dimension/utils/: __init__.py  holiday_checker.py
tests/: __init__.py  test_converters.py  test_current_date.py  test_events.py  test_generators.py  test_main.py
