[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-calendar-dimension"
version = "1.0.0"
description = "A comprehensive library for Persian (Jalali), Gregorian, and Hijri calendar operations including date conversion, dimension generation, and current date information"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pouya", email = "pouya@example.com"}
]
maintainers = [
    {name = "Pouya", email = "pouya@example.com"}
]
keywords = ["calendar", "persian", "jalali", "gregorian", "hijri", "date", "conversion", "dimension"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Scheduling",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "skyfield>=1.46",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pouya/multi-calendar-dimension"
Documentation = "https://multi-calendar-dimension.readthedocs.io"
Repository = "https://github.com/pouya/multi-calendar-dimension.git"
Issues = "https://github.com/pouya/multi-calendar-dimension/issues"
Changelog = "https://github.com/pouya/multi-calendar-dimension/blob/main/CHANGELOG.md"

[project.scripts]
multi-calendar = "multi_calendar_dimension.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["multi_calendar_dimension*"]

[tool.setuptools.package-data]
multi_calendar_dimension = ["events/*.py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=multi_calendar_dimension --cov-report=html --cov-report=term-missing"
